- Added show order detail function - Added change order status to paid - shiped - canceled function - Added shipment show detail function - Added shipment change status to packing - on the way - delivered
