# routes/api.php
@@ -25,5 +25,24 @@ Route::group(['middleware' => ['jwt.auth']], function () {
 
 	// Order Resource
 	Route::post('/orders', 'OrderController@addOrder')->name('post-order');
+	Route::post('/orders/{id}/confirm/payment', 'OrderController@confirmPayment')->name('confirm-payment');
+
+	// Shipment Resource
+	Route::get('/shipments/{id}/status', 'ShipmentController@showStatus')->name('shipment-status');
+
+	// Logistic Partner Resource
+	Route::get('/logistic-partners', 'LogisticPartnerController@showAll')->name('get-logistic-partner');
+
+	// Admin Only
+	Route::group(['middleware' => 'is_role:admin'], function() {
+		// Order Resource
+		Route::get('/orders/{id}', 'OrderController@show')->name('show-order');
+		Route::post('/orders/{id}/ship', 'OrderController@shipOrder')->name('ship-order');
+		Route::post('/orders/{id}/cancel', 'OrderController@cancelOrder')->name('cancel-order');
+
+		// Shipment Resource
+		Route::put('/shipments/{id}/status/{status}', 'ShipmentController@changeStatus')->name('change-shipment-status')
+			->where('status', 'packing|on the way|delivered');
+	});
 });
 
